# jazz

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.nightly  LICENSE-MIT  Readme.md  android-build.sh  appveyor.yml  build.sh  credits.md  init.lua  install.sh  keys.gpg.enc  panic-message.txt  panic.txt  private_key.enc  public_key  sponsors.md  supporters.md  torchbear-launch.sh
.cargo/: config
actix-lua-web/: Cargo.toml  torchbear-launch.sh
actix-lua-web-app/: Cargo.toml  Settings.toml
actix-lua-web-app/content/: 50ee670c-1e2a-4ed7-8558-1dd6a87dbe8e  f8ea4d9d-e980-4677-97ee-15135a60c0ea  fbe0bbaa-f734-4d65-9252-36e4235a6064
actix-lua-web-app/logs/: 0127dd36-bca0-46b6-9ba9-d7a43fa3fba5  02cebe32-c662-4d62-a73b-5c87dda456fb  1009d502-39b7-4e75-b1ca-ea5c809ae829  1030c2b5-b12a-4c81-a636-7d81bc078cfa  10b19c0a-e2ac-49e4-b819-8395d79817a5  10e29546-1f35-41a1-9179-cbcfbc170159  13de5ed8-2436-44fe-9770-6dc2e28cf9c2  14821ea4-1b15-47f8-b436-b18c9ee490f0  178ac477-f501-4684-a308-28bd0319c415  1b0c57b2-7a81-4cfd-9f76-dc45904e0bd3  1d9fb58a-f9cf-47e9-b88a-e2e1b4c03498  1fb8e116-68a7-46e0-96c6-c9eb388b457d  244e502a-cdfe-4ac2-8889-9b84f3a59bb8  288c0573-0433-41d7-9177-7487a7df6860  2bd2f830-0e41-45e6-bbda-3ec596e9f544  2beac133-efea-4958-9c17-68ccfe60e07c  2e5b8a19-5dd2-4040-bd11-fcaa16b8c102  2f001fd1-4362-473e-a771-3416589b3a1c  383e179b-fc16-4108-a773-346c31ad7be2  39f8c42a-f118-491c-85cf-01c8fdee5dfb  3ba591d8-a367-4977-931e-f954e8375b99  3c14971f-efee-4fe5-811d-21531f187928  3d059517-e37e-41ef-8bda-9b5ba9867d12  3dd635cf-aef6-4ce2-b031-925e2cd8c037  44d28fc1-4973-437a-9a10-c61f3ae3925a  45505b5e-abb9-4495-b581-92219258a2ac  460b0b78-4bb9-4923-9deb-c4801751f731  4d3b749e-d26d-4646-9c44-821820b2b19d  53270a5a-42af-470a-94ef-a724d9bf5fbb  561fa722-5360-4ddc-b4ca-6c7016c025b6  58d3d221-e500-40b6-b402-8e918670372a  590fb514-3ab2-4deb-b199-dd98bdfa0977  59fdd6ee-c896-4061-ac25-c088e0776537  5c9b7e4f-90e3-44f5-a05c-0344c21c877f  5d087932-98da-4f70-8396-ad4840c7ffbc  6222a135-3d3b-4fde-873f-f686e855e718  6550fd9e-9cc6-4e56-bf17-985e9be22818  65797d78-abc3-4a70-9391-674cf88bc874  689d342f-e81a-4267-a8f2-c180c1f33631  696d2968-70bb-4a68-bf9d-df1453328aaa  (+54 more)
actix-lua-web-app/lua/: events.txt  handler.lua  inspect.lua
actix-lua-web-app/lua/actions/: create_document.lua  debug.lua  get_document_by_type.lua  get_documents.lua  get_documents_by_type.lua  get_index.lua  get_todos.lua  log_request.lua  post_document.lua  post_new_document.lua  test-client.lua
actix-lua-web-app/lua/documents/: get_document.lua  get_documents.lua
actix-lua-web-app/lua/rules/: post_document_rule.lua  request_document_rule.lua  request_documents_rule.lua
actix-lua-web-app/lua/trash/: get_document_by_type.lua  get_documents_by_type.lua  post_document.lua
actix-lua-web-app/lua/utils/: debug.lua  fs.lua  helpers.lua  table.lua  underscore_alias.lua
actix-lua-web-app/src/: main.rs
actix-lua-web-app/templates/: document.html  index.html
actix-lua-web/src/: init.lua  lib.rs  main.rs  server.rs
actix-lua-web/src/handler/: web_server.lua
actix-lua-web/src/lua_bindings/: client.rs  markdown.rs  mod.rs  stringset.rs
actix-lua-web/src/lua_bindings/crypto/: hash.rs  mod.rs
content/: 50ee670c-1e2a-4ed7-8558-1dd6a87dbe8e  813c63d4-3b27-4d5c-988c-03a95bb3474d
hello-world/: Settings.toml
hello-world/main/: events.txt
hello-world/main/actions/: send_plain_hello.lua
hello-world/main/rules/: respond_to_any_request.lua
lua/: debug.lua  fs.lua  handler.lua  utils.lua
lua-lib/: Luvent.lua  package_loader.lua  table_ext.lua  torchbear.lua  underscore_alias.lua
lua/documents/: create_document.lua  get_document.lua  get_documents.lua  helpers.lua
src/: conf.rs  error.rs  handler.lua  lib.rs  logger.rs  main.rs
src/bindings/: client.rs  fs.rs  git.rs  heck.rs  json.rs  log.rs  mime.rs  mod.rs  regex.rs  scl.rs  select.rs  server.rs  stackoverflow_scraper.lua  stringset.rs  tantivy.rs  tar.rs  tera.rs  time.rs  uuid.rs  yaml.rs  zip.rs
src/bindings/app/: diff.rs  git.rs  handlebars.rs  log.rs  markdown.rs  mod.rs  patch.rs  tantivy.rs  tera.rs
src/bindings/archive/: mod.rs  tar.rs  xz.rs  zip.rs
src/bindings/crypto/: box_.rs  checksumdir.rs  hash.rs  mod.rs  random.rs  sign.rs  sumdir.rs
src/bindings/net/: ipv4.rs  ipv6.rs  mod.rs
src/bindings/number/: math.rs  mod.rs
src/bindings/string/: base64.rs  case.rs  heck.rs  mime.rs  mod.rs  nanoid.rs  regex.rs  stringset.rs  ulid.rs  uuid.rs
src/bindings/system/: command.rs  dirs.rs  env.rs  fs.rs  memory.rs  mod.rs  path.rs  process.rs  time.rs
src/bindings/text/: combinediff.rs  diff.rs  interdiff.rs  json.rs  mod.rs  patch.rs  scl.rs  select.rs  splitdiff.rs  yaml.rs
src/bindings/web/: client.rs  mod.rs  sass.rs  server.rs
src/handlers/: bootstrap.lua  bridge.lua  debug.lua  web_server.lua
src/lua_bindings/: client.rs  markdown.rs  mod.rs  server.rs  stringset.rs  tera.rs  time.rs  uuid.rs  yaml.rs
src/lua_bindings/crypto/: box_.rs  mod.rs  sign.rs
src/managers/: web_server.lua
templates/: base.html  document-list.json  document.json
