[package]
name = "torchbear"
description = "network application framework"
version = "0.5.0"
authors = ["Mitchell Tannenbaum <tannenbaum.mitchell@gmail.com>"]
repository = "https://github.com/foundpatterns/torchbear"
readme = "Readme.md"
keywords = ["actix", "lua", "cryptography", "web", "frameworkd"]
license = "MIT/Apache-2.0"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::http-client"]
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]

[lib]
name = "torchbear_lib"
path = "src/lib.rs"

[[bin]]
name = "torchbear"
path = "src/main.rs"

[dependencies]
actix = "0.7"
actix-lua = "0.5"
actix-web = { version = "0.7", features = ["tls"] }
futures = "0.1"
env_logger = "0.6"
tera = "0.11"
rlua = "0.15"
failure = "0.1"
failure_derive = "0.1"
serde = "1.0"
serde_yaml = "0.8"
rlua_serde = "0.2"
uuid = "0.7"
serde_urlencoded = "0.5"
comrak = "0.3"
serde_json = "1.0"
rust_sodium = "0.10"
base64 = "0.10"
config = "0.9"
clap = "2.32"
chrono = "0.4"
log = "0.4.5"
fern = { version = "0.5", features = ["colored"] }
colored = "1.6.1"
log-panics = "2.0"
select = "0.4"
serde_derive = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
git2 = "0.7"
regex = "1"

[dev-dependencies]
tempfile = "3"

#[features]
#default = []
#log_bindings = []
