[package]
name = "torchbear"
description = "Lua programming environment in Rust"
version = "0.10.8"
authors = ["Mitchell Tannenbaum <tannenbaum.mitchell@gmail.com>"]
repository = "https://github.com/foundpatterns/torchbear"
readme = "Readme.md"
keywords = ["actix", "lua", "cryptography", "web", "framework"]
license = "MIT/Apache-2.0"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::http-client"]
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]

[lib]
name = "torchbear_lib"
path = "src/lib.rs"

[[bin]]
name = "torchbear"
path = "src/main.rs"

[dependencies]
# base
actix = "0.7"
actix-lua = "0.5"
futures = "0.1"
rlua = "0.15"
rlua_serde = "0.2"
# web
actix-web = { version = "0.7", features = ["ssl"] }
# cli and log
env_logger = "0.6"
failure = "0.1"
failure_derive = "0.1"
clap = "2.32"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
colored = "1.6"
human-panic = "1.0"
# text
serde = "1.0"
serde_yaml = "0.8"
serde_urlencoded = "0.5"
comrak = "0.4"
serde_json = "1.0"
serde_derive = "1.0"
diff-rs = "0.2"
patch-rs = "0.3"
select = "0.4"
scl = "0.0"
# string
ulid = "0.3"
uuid = "0.7"
regex = "1.1"
mime_guess = "1.8"
heck = "0.3"
# app
tera = "0.11"
tantivy = "0.8"
chrono = "0.4"
base64 = "0.10"
git2 = "0.8"
# crypto
sodiumoxide = "0.2"
blake2 = "0.8"
openssl = { version = "0.10", features = ["vendored"] }
checksumdir = "0.1.0"
# archive
zip = "0.5"
tar = "0.4"
xz2 = "0.1"

[dev-dependencies]
tempfile = "3"

[features]
default = []
tantivy_bindings = []
