[package]
name = "torchbear"
description = "A simple and complete programming environment"
version = "0.11.10"
authors = ["Mitchell Tannenbaum <tannenbaum.mitchell@gmail.com>"]
repository = "https://github.com/foundpatterns/torchbear"
readme = "Readme.md"
keywords = ["actix", "lua", "cryptography", "web", "framework"]
license = "MIT/Apache-2.0"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::http-client"]
edition = "2018"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]

[lib]
name = "torchbear_lib"
path = "src/lib.rs"

[[bin]]
name = "torchbear"
path = "src/main.rs"

[dependencies]
# base
actix = "0.7"
actix-lua = "0.7"
futures = "0.1"
rlua = "0.16"
rlua_serde = "0.3"
# system
dirs = "1.0"
libm = "0.1"
globwalk = "0.6"
# web
actix-web = { version = "0.7", features = ["ssl"] }
sass-rs = "0.2"
# cli and log
env_logger = "0.6"
clap = "2.32"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
colored = "1.6"
human-panic = "1.0"
# text
serde = "1.0"
serde_yaml = "0.8"
serde_urlencoded = "0.5"
comrak = "0.4"
serde_json = "1.0"
serde_derive = "1.0"
diff-rs = "0.2"
patch-rs = "0.5"
splitdiff-rs = "0.4"
select = "0.4"
scl = { git = "https://github.com/foundpatterns/scl" }
# string
ulid = "0.3"
uuid = "0.7"
regex = "1.1"
mime_guess = "1.8"
nanoid = "0.2"
heck = "0.3"
# app
tera = { git = "https://github.com/foundpatterns/tera" }
tantivy = { version = "0.8", optional = true }
chrono = "0.4"
base64 = "0.10"
git2 = "0.8"
# crypto
sodiumoxide = "0.2"
blake2 = "0.8"
openssl = { version = "0.10", features = ["vendored"] }
checksumdir = "0.3.0"
# archive
zip = "0.5"
tar = "0.4"
xz2 = "0.1"
[dev-dependencies]
tempfile = "3"

[features]
default = []
tantivy_bindings = []
