[package]
name = "actix-lua-web"
version = "0.1.0"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]

[dependencies]
actix = "0.7.3"
actix-web = "0.7.4"
actix-lua = { git = "https://github.com/voidxnull/actix-lua", branch = "error-handling" }
futures = "0.1.23"
env_logger = "0.5.12"
tera = "0.11.12"
rlua = "0.14.2"
failure = "0.1.2"
serde = "1.0.75"
serde_yaml = "0.8.2"
rlua_serde = { git = "https://github.com/voidxnull/rlua_serde", branch = "update_rlua" }
uuid = "0.6.5"
serde_urlencoded = "0.5.3"
comrak = "0.2"
